<resources>
    <string name="app_name">代表履职平台</string>
    <string name="home_title">滨州人大代表履职平台</string>
    <string name="version_name">1.0.3</string>
    <string name="about_title">关于</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="v_1_0_0">滨州人大履职服务平台 V 1.0.3</string>
    <string name="jishuzhichi">浙江巨化信息技术杭州分公司技术支持</string>
    <string name="banbenshengji">版本升级</string>
    <string name="erweima">二维码</string>
    <string name="ruanjianfenxiang">软件分享</string>
    <string name="qingchuhuancun">清除缓存</string>
    <string name="dianhuazhichi">电话支持：0571–89055783</string>
    <string name="copyright">Copyright@2007–2017 浙江巨化信息有限公司</string>
    <string name="all_rights_reserved">All Rights Reserved</string>
    <string name="placehholder_enter_pwd">请输入密码</string>
    <string name="placeholder_enter_account">请输入账号</string>
    <string name="placeholder_orignal_password">请输入原始密码</string>
    <string name="placeholder_new_password">请输入新密码</string>
    <string name="placeholder_confirm_password">再次输入新密码</string>
    <string name="btn_remember_pwd">记住密码</string>
    <string name="btn_forget_pwd"><![CDATA[忘记密码>>]]></string>
    <string name="qrcode_title_str">滨州人大履职服务平台 V 1.0.0</string>
    <string name="saomaxiazai">扫描二维码下载人大履职平台</string>
    <string name="share_app">滨州人大履职平台移动端下载地址：</string>
    <string name="app_slogan">为人民服务</string>
    <string name="setting_key_mobile_network_play">mobile_network_play</string>
    <string name="setting_key_mobile_network_download">mobile_network_download</string>
    <string name="setting_key_sound_effect">sound_effect</string>
    <string name="network">网络</string>
    <string name="mobile_network_play">使用移动网络播放</string>
    <string name="mobile_network_download">使用移动网络下载</string>
    <string name="download_tips">当前处于移动网络，下载将消耗较多流量，是否继续下载？</string>
    <string name="download_tips_sure">继续下载</string>
    <string name="tips">温馨提示</string>
    <string name="now_download">正在下载：%s</string>
    <string name="download_success">%s下载完成</string>
    <string name="recent_update">最近更新：%s</string>
    <string name="unable_to_download">暂时无法下载</string>
    <string name="loading">努力加载中…</string>
    <string name="loadFailTips">可能的原因：\n1.设备网络连接中断。\n2.您的网络运营商网络不稳定。\n3.服务器连接出了问题。</string>
    <drawable name="clr_normal">#00000000</drawable>
    <drawable name="clr_pressed">#55000000</drawable>



    <string name="btn_login">登    陆</string>
    <string name="placeholder_login_account">请输入账号</string>
    <string name="placeholder_login_password">请输入密码</string>
    <string name="placeholder_comment_add">在此添加意见&#8230;</string>
    <string name="placeholder_document_query">搜索文件</string>
    <string name="txt_login_remember">记住密码</string>
    <string name="btn_login_forget">忘记密码？</string>
    <string name="progress_login">正在登录中&#8230;</string>
    <string name="progress_read">文件加载中&#8230;</string>
    <string name="progress_check_version">检查更新中&#8230;</string>
    <string name="progress_password_back">正在取回密码&#8230;</string>
    <string name="toast_empty_account">账号不能为空！</string>
    <string name="toast_empty_password">密码不能为空！</string>
    <string name="toast_length_account">账号长度不低于六位！</string>
    <string name="toast_length_password">密码长度不低于六位！</string>
    <string name="toast_empty_data">没有更多数据了！</string>

    <string name="toast_empty_query">请输入要查询的文件！</string>


    <string name="action_confirm">确定</string>
    <string name="action_cancel">取消</string>
    <string name="action_send">发送</string>
    <string name="action_update">立即更新</string>

    <string name="tip_image_icon">图标</string>
    <string name="txt_load_empty">暂无任何信息~</string>
    <string name="txt_load_fail">加载失败</string>
    <string name="txt_loading">数据加载中&#8230;</string>

    <string name="no_permission_storage">未获得文件权限，后续功能受限！</string>
</resources>
