<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    android:layout_weight="1"
    android:weightSum="1">
    <include layout="@layout/activity_about_title"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/about_logo" />

        <TextView
            android:id="@+id/textview_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/v_1_0_0"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30sp"
            android:layout_marginTop="10sp"
            android:text="@string/jishuzhichi"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="14sp"
            android:textStyle="normal|bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <Button
                android:id="@+id/update"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/common_white"
                android:elevation="0dp"
                android:paddingStart="15sp"
                android:text="@string/banbenshengji"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="20dip"
                android:background="@color/common_white"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dip"
                android:src="@drawable/ic_navigate_next" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <Button
                android:id="@+id/qrcode"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="0sp"
                android:paddingStart="15sp"
                android:text="@string/erweima"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="20dip"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dip"
                android:src="@drawable/ic_navigate_next" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <Button
                android:id="@+id/share"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="0sp"
                android:paddingLeft="15sp"
                android:text="@string/ruanjianfenxiang"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="20dip"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dip"
                android:src="@drawable/ic_navigate_next" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clean"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="0dp"
                android:paddingLeft="15sp"
                android:text="@string/qingchuhuancun"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="20dip"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dip"
                android:src="@drawable/ic_navigate_next" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_marginBottom="5dp">

        <TextView
            android:text="@string/dianhuazhichi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:gravity="bottom" />
        <TextView
            android:text="@string/copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="bottom" />
        <TextView
            android:text="@string/all_rights_reserved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="bottom" />
    </LinearLayout>



</LinearLayout>