<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/actionbar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical|start"
            android:text="原始密码："
            android:textColor="@color/common_black_shadow"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/original_pwd"
            android:hint="@string/placeholder_orignal_password"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/new_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical|start"
            android:textColor="@color/common_black_shadow"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:text="新的密码："
            android:gravity="center_vertical|start"
            android:textColor="@color/common_black_shadow"
            android:textSize="16sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical|start"
            android:id="@+id/new_pwd"
            android:hint="@string/placeholder_new_password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/confirm_pwd"
            android:textColor="@color/common_black_shadow"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical|start"
            android:text="确认密码："
            android:textColor="@color/common_black_shadow"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/again_pwd"
            android:hint="@string/placeholder_confirm_password"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="textPassword"
            android:gravity="center_vertical|start"
            android:textColor="@color/common_black_shadow"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/confirm_modify_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical|start"
            android:text="确认修改"
            android:backgroundTint="@color/colorAccent"
            android:textAlignment="center"
            android:textColor="@color/common_white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>